# ASHN

./: .replit  DOCUMENTATION.md  design_guidelines.md  package-lock.json  package.json  pyproject.toml  replit.md  tailwind.config.ts
agents/: __init__.py  graph.py  run.py  server.py  state.py
agents/nodes/: __init__.py  detection.py  rca.py  remediation.py  verification.py
agents/tools/: __init__.py  gns3.py  prometheus.py  sonic.py
attached_assets/: Pasted--AASHN-Complete-UI-Design-Specification-Agentic-Autonom_1766654137001.txt  Pasted--Agentic-Autonomous-Self-Healing-Networks-AASHN-Complet_1766660334886.txt  Pasted-End-to-End-Project-Document-Prestera-BGP-Fabric-with-Li_1768110833078.txt  Pasted-Metrics-Documentation-System-Metrics-Metric-Description_1768111845568.txt  Pasted-Use-case-2-Switch-link-failure-and-automatic-traffic-re_1766658871967.txt
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: app-sidebar.tsx  theme-provider.tsx
client/src/components/dashboard/: agent-internal-logs.tsx  agent-status.tsx  device-heatmap.tsx  incident-list.tsx  (+5 more)
client/src/pages/: agents.tsx  audit.tsx  copilot.tsx  dashboard.tsx  demo-console.tsx  devices.tsx  incident-detail.tsx  incidents.tsx  metrics.tsx  settings.tsx  topology.tsx  use-cases.tsx
scripts/: seed-metrics.ts
server/: copilot.ts  database-storage.ts  detection-agent.ts  github.ts  gns3.ts  metrics-collector.ts  nl-query-service.ts  orchestrator.ts  prometheus-integration.ts  routes.ts  storage.ts  telemetry-exporter.ts  topology-generator.ts
shared/: schema.ts
